--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,8 +39,10 @@ jobs:
       - name: Tag Branch
         id: branch_tag
         run: |
-          if [ "${{ github.ref_name }}" != "${{ github.event.repository.default_branch }}" ]; then
-            echo "branch_tag=${github.ref_name}" >> $GITHUB_OUTPUT
+          if [ -z "${{ github.ref_name }}" ]; then
+            echo "branch_tag=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+          elif [ "${{ github.ref_name }}" != "${{ github.event.repository.default_branch }}" ]; then
+            echo "branch_tag=${{ github.ref_name }}" >> $GITHUB_OUTPUT
           else
             echo "branch_tag=''" >> $GITHUB_OUTPUT
           fi
@@ -58,7 +60,6 @@ jobs:
           path: TestResults-${{ steps.branch_tag.branch_tag }}-${{ matrix.go-version }}-${{ matrix.go-os }}-${{matrix.go-arch }}.json
           retention-days: 7
           if-no-files-found: error
-
       - name: Build Application
         run: CGO_ENABLED=${{ env.use_cgo }}; go build -o ./binaries/${{ env.application_prefix }}-${{ steps.branch_tag.branch_tag }}-${{ matrix.go-version }}-${{ matrix.go-os }}-${{matrix.go-arch }} .
 
@@ -109,11 +110,11 @@ jobs:
       - id: setup-buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Dockerhub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+#      - name: Login to Dockerhub
+#        uses: docker/login-action@v3
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Login to GHCR
         uses: docker/login-action@v3
