--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -13,7 +13,7 @@ registries:
     password: ${{secrets.DOCKERHUB_PASSWORD}}
 
 updates:
-  # Maintain dependencies for npm
+  # Maintain dependencies for golang
   - package-ecosystem: "gomod"
     directory: "/"
     schedule:
