--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,6 +1,3 @@
-
-
-
 name: Build
 on:
   push:
@@ -16,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: ['1.22.x']
+        go-version: ['1.22.x', 'latest']
         go-os: ['linux']
         go-arch: ['amd64', 'arm', 'arm64']
     steps:
@@ -71,29 +68,13 @@ jobs:
           retention-days: 7
           if-no-files-found: error
 
-  release_application:
-    name: Release Application
-    runs-on: ubuntu-latest
-    # Only run when pushed to master
-    if: ${{ (github.event_name == 'push' && github.ref_name == github.event.repository.default_branch) || github.event_name == 'tag'  }}
-    strategy:
-      matrix:
-        go-version: ['1.22.x']
-        go-os: ['linux']
-        go-arch: ['amd64', 'arm', 'arm64']
-
-    steps:
-      - name: todo
-        run: echo "this has not been implemented yet"
-
   build_container:
     name: Build Container
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: ['1.22.x']
+        go-version: ['1.22.x', 'latest']
         go-os: ['linux']
-        go-arch: ['amd64', 'arm', 'arm64']
     permissions:
       contents: read
       packages: write
@@ -102,19 +83,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - id: setup-qemu
+      - name: Setup QEMU
         uses: docker/setup-qemu-action@v3
         with:
-          platforms: ${{ matrix.go-arch }}
+          platforms: arm,arm64,amd64
 
-      - id: setup-buildx
+      - name: Setup Buildx
+        id: buildx
         uses: docker/setup-buildx-action@v3
 
-#      - name: Login to Dockerhub
-#        uses: docker/login-action@v3
-#        with:
-#          username: ${{ secrets.DOCKERHUB_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to Dockerhub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Login to GHCR
         uses: docker/login-action@v3
@@ -130,10 +112,10 @@ jobs:
           images: ${{ github.repository }}
           tags: |
             type=schedule
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=ref,event=branch
+            type=semver,pattern={{version}}-${{ matrix.go-version }}
+            type=semver,pattern={{major}}.{{minor}}-${{ matrix.go-version }}
+            type=semver,pattern={{major}}-${{ matrix.go-version }}
+            type=ref,event=branch,pattern={{branch}}-${{ matrix.go-version }}
             type=ref,event=pr
             type=sha
           flavor: |
@@ -143,7 +125,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: ${{ matrix.go-os }}/${{ matrix.go-arch }}
+          platforms: '${{matrix.go-os}}/arm,${{matrix.go-os}}/arm64,${{matrix.go-os}}/amd64'
           push: ${{ github.event_name != 'pull_request' || github.ref_name == github.event.repository.default_branch }}
           tags: ${{ steps.container_tags.outputs.tags }}
           labels: ${{ steps.container_tags.outputs.labels }}
