--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -78,6 +78,8 @@ jobs:
     permissions:
       contents: read
       packages: write
+      id-token: write
+      attestations: write
 
     steps:
       - name: Checkout
@@ -98,13 +100,6 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Login to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Create container tags
         id: container_tags
         uses: docker/metadata-action@v5
@@ -123,9 +118,17 @@ jobs:
 
       - name: Build container
         uses: docker/build-push-action@v5
+        id: push
         with:
           context: .
           platforms: '${{matrix.go-os}}/arm,${{matrix.go-os}}/arm64,${{matrix.go-os}}/amd64'
           push: ${{ github.event_name != 'pull_request' || github.ref_name == github.event.repository.default_branch }}
           tags: ${{ steps.container_tags.outputs.tags }}
           labels: ${{ steps.container_tags.outputs.labels }}
+
+      - uses: actions/attest-build-provenance@v2
+        id: attest
+        with:
+          subject-name: ${{ github.repository }}
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
