--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -132,3 +132,5 @@ jobs:
           subject-name: ${{ github.repository }}
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
