--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -121,16 +121,10 @@ jobs:
         id: push
         with:
           context: .
+          sbom: true
+          provenance: mode=max
           platforms: '${{matrix.go-os}}/arm,${{matrix.go-os}}/arm64,${{matrix.go-os}}/amd64'
           push: ${{ github.event_name != 'pull_request' || github.ref_name == github.event.repository.default_branch }}
           tags: ${{ steps.container_tags.outputs.tags }}
           labels: ${{ steps.container_tags.outputs.labels }}
 
-      - uses: actions/attest-build-provenance@v2
-        id: attest
-        with:
-          subject-name: ${{ github.repository }}
-          subject-digest: ${{ steps.push.outputs.digest }}
-          push-to-registry: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
